hard-gists/7948151/run.log
=== Docker Run Log for 7948151 ===
Started at: Mi 29. Okt 17:22:52 CET 2025

[2025-10-29 17:22:53] START: Running container for 7948151
[2025-10-29 17:22:53] SUCCESS: Container 4a2d84cb3e3d211ca2a956bb2e6af147a256829d7a3d23192602ded47cc60699 started for 7948151
=== Container logs for 7948151 ===
  File "/snippet.py", line 176
    print "Local contrast normalization of the data"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7948151 ===
[2025-10-29 17:22:55] INFO: Container 4a2d84cb3e3d211ca2a956bb2e6af147a256829d7a3d23192602ded47cc60699 has stopped
